[tool.poetry]
name = "YetAnotherPicSearch4Telegram"
version = "1.0.0"
description = "Yet Another Picture Search bot for Telegram"
authors = ["NekoAria"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "YetAnotherPicSearch4Telegram" },
]
homepage = "https://github.com/NekoAria/YetAnotherPicSearch4Telegram"
repository = "https://github.com/NekoAria/YetAnotherPicSearch4Telegram"
keywords = ["telegram", "ascii2d", "baidu", "e-hentai", "google", "iqdb", "saucenao", "tracemoe", "yandex", "anime", "danbooru", "doujin", "pixiv"]

[tool.poetry.dependencies]
python = "^3.13.1"
arrow = "^1.3.0"
cachetools = "^5.5.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
lxml = "^5.3.0"
PicImageSearch = "^3.11.3"
Pillow = "^10.4.0"
pydantic = {extras = ["dotenv"], version = "^2.10.5"}
pydantic-settings = "^2.7.1"
pyquery = "^2.0.1"
python-socks = {extras = ["asyncio"], version = "^2.6.1", optional = true}
socksio = { version = "^1.0.0", optional = true }
Telethon = "^1.38.1"
tenacity = "^8.5.0"

[tool.poetry.extras]
socks = ["python-socks", "socksio"]

[tool.poetry.dev-dependencies]

[tool.mypy]
python_version = "3.8"
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[tool.ruff]
select = ["F", "E", "W", "I", "UP"]
target-version = "py38"
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
